# flutter-rust-example

./: .gitignore
batterytest/: Cargo.toml
batterytest/src/: main.rs
windows_battery_check/: README.md  justfile  pubspec.yaml
windows_battery_check/android/app/: build.gradle
windows_battery_check/android/app/src/main/: AndroidManifest.xml
windows_battery_check/android/app/src/main/kotlin/com/example/windows_battery_check/: MainActivity.kt
windows_battery_check/android/app/src/profile/: AndroidManifest.xml
windows_battery_check/ios/Runner/: Info.plist  bridge_generated.h
windows_battery_check/ios/Runner.xcodeproj/: project.pbxproj
windows_battery_check/lib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  main.dart  native.dart
windows_battery_check/linux/: CMakeLists.txt  my_application.cc
windows_battery_check/macos/Runner/: bridge_generated.h
windows_battery_check/macos/Runner.xcodeproj/: project.pbxproj
windows_battery_check/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
windows_battery_check/macos/Runner/Configs/: AppInfo.xcconfig
windows_battery_check/native/: Cargo.toml
windows_battery_check/native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs
windows_battery_check/test/: widget_test.dart
windows_battery_check/web/: index.html  manifest.json
windows_battery_check/windows/: CMakeLists.txt  rust.cmake
windows_battery_check/windows/runner/: Runner.rc  main.cpp
