[package]
name = "batterytest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.43.0", features =["Devices_Power", "Win32_Foundation", "Win32_System_Power", "Win32_System_Com", "Foundation", "System_Power"]}

[target.'cfg(any(target_os = "macos"))'.dependencies]
libc = "^0.2"
mach = "^0.3"
core-foundation = "0.9.3"